syntax = "proto3";

package duynvh.pcbook;

option go_package = "/pb";

import "laptop_message.proto";

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreeateLaptopResponse {
  string id = 1;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreeateLaptopResponse) {};
}